--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
                 <div class="flex items-center justify-between w-full md:w-auto">
                   <a href="/">
                     <span class="sr-only">Title</span>
-                    <img class="h-9 w-auto sm:h-20" src="../src/assets/img/GTA-6-Logo-PNG.png" alt="logo gta">
+                    <img class="h-9 w-auto sm:h-20" src="./assets/img/GTA-6-Logo-PNG.png" alt="logo gta">
                   </a>
                 </div>
               </div>
