--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <nav class="relative flex items-center justify-between sm:h-10 lg:justify-start" aria-label="Global">
               <div class="flex items-center flex-grow flex-shrink-0 lg:flex-grow-0">
                 <div class="flex items-center justify-between w-full md:w-auto">
-                  <a href="/">
+                  <a href="#">
                     <span class="sr-only">Title</span>
-                    <img class="h-9 w-auto sm:h-20" src="../src/assets/img/GTA-6-Logo-PNG.png" alt="logo gta">
+                    <img class="h-9 w-auto sm:h-20" src="./assets/img/GTA-6-Logo-PNG.png" alt="logo gta">
                   </a>
                 </div>
               </div>
